[project]
name = "wax-cpu-keeper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "colorlog>=6.9.0",
    "eosapi-async>=2.1.1",
    "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "black",
]
